--- a/composer.json
+++ b/composer.json
@@ -32,15 +32,16 @@
 	},
 	"require": {
 		"php": "^7.0|^8.0",
-		"wikibase/data-model": "~9.0|~8.0",
+		"wikibase/data-model": "dev-master",
 		"serialization/serialization": "~4.0|~3.1",
 		"data-values/serialization": "~1.0"
 	},
 	"require-dev": {
 		"data-values/geo": "~4.0|~3.0",
-		"data-values/number": ">=0.1 <0.11",
+		"data-values/number": "~0.13",
 		"data-values/time": "~1.0|~0.2",
-		"phpunit/phpunit": "~8.0"
+		"phpunit/phpunit": "~8.0",
+		"wikibase/data-model-services": "dev-master"
 	},
 	"suggest": {
 		"data-values/geo": "Needed for deserialization of geographical values",
